# claude-skill-find-skill

./: .gitignore  CLAUDE.md  README.md  SKILL.md  install.sh  pyproject.toml  quick-install.sh  uninstall.sh  update-skills-catalogue.sh
.github/workflows/: publish.yml
adapters/codex/: SKILL.md
adapters/cursor/: find-skill.md  install-skill.md
adapters/opencode/: find-skill.md  install-skill.md
commands/: install-skill.md
src/find_skill_cli/: cli.py
